Fix all size and layout issues for all landscape modile and tablet size devices

--- a/_scss/2-global-components/_apply.scss
+++ b/_scss/2-global-components/_apply.scss
@@ -32,6 +32,18 @@
   }
 }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .apply-pos {
+    width: 40%;
+  }
+}
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .apply-pos {
+    width: 40%;
+  }
+}
+
 @media screen and (max-height: 375px) and (max-width: 667px) {
   .apply-pos {
     width: 40%;
