--- a/_scss/2-global-components/_more.scss
+++ b/_scss/2-global-components/_more.scss
@@ -25,6 +25,18 @@
   }
 }
 
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .more-pos {
+    width: 40%;
+  }
+}
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .more-pos {
+    width: 40%;
+  }
+}
+
 @media screen and (max-height: 375px) and (max-width: 667px) {
   .more-pos {
     width: 40%;
