--- a/_scss/2-global-components/_questions.scss
+++ b/_scss/2-global-components/_questions.scss
@@ -17,6 +17,24 @@
   }
 }
 
+@media screen and (max-height: 768px) and (max-width: 1024px) {
+  .phone {
+    width: 12%;
+  }
+}
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .phone {
+    width: 13%;
+  }
+}
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .phone {
+    width: 15%;
+  }
+}
+
 @media screen and (max-height: 375px) and (max-width: 667px) {
   .phone {
     width: 15%;
@@ -56,6 +74,18 @@
 @media screen and (min-width: 1200px) {
   .questions-pos {
     width: 22%;
+  }
+}
+
+@media screen and (max-height: 414px) and (max-width: 736px) {
+  .questions-pos {
+    width: 40%;
+  }
+}
+
+@media screen and (max-height: 412px) and (max-width: 732px) {
+  .questions-pos {
+    width: 40%;
   }
 }
 
